# src/roe/_generated/models/__init__.py
@@ -1,6 +1,7 @@
 """ Contains all the data models used in inputs/outputs """
 
 from .agent_datum import AgentDatum
+from .agent_engine_type_list import AgentEngineTypeList
 from .agent_execution_request_request import AgentExecutionRequestRequest
 from .agent_input_definition import AgentInputDefinition
 from .agent_job_delete_data_response import AgentJobDeleteDataResponse
@@ -32,12 +33,16 @@ from .patched_update_policy_request import PatchedUpdatePolicyRequest
 from .policy import Policy
 from .policy_version import PolicyVersion
 from .policy_version_created_by import PolicyVersionCreatedBy
+from .supported_llm_model import SupportedLLMModel
+from .supported_llm_model_list import SupportedLLMModelList
+from .temporal_workflow import TemporalWorkflow
 from .update_policy import UpdatePolicy
 from .update_policy_request import UpdatePolicyRequest
 from .user_info import UserInfo
 
 __all__ = (
     "AgentDatum",
+    "AgentEngineTypeList",
     "AgentExecutionRequestRequest",
     "AgentInputDefinition",
     "AgentJobDeleteDataResponse",
@@ -69,6 +74,9 @@ __all__ = (
     "Policy",
     "PolicyVersion",
     "PolicyVersionCreatedBy",
+    "SupportedLLMModel",
+    "SupportedLLMModelList",
+    "TemporalWorkflow",
     "UpdatePolicy",
     "UpdatePolicyRequest",
     "UserInfo",
